base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: 674182809289.dkr.ecr.us-east-1.amazonaws.com/weather-app:10
        args:
          - "-text=Hello from Weather App running on EKS"
        ports:
          - containerPort: 5678
