base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: weather
spec:
  selector:
    app: weather
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
