base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:674182809289:certificate/14de9385-291b-4aa7-b8e9-64d93927d12b
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
  - host: weather.sajid-platform.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 80
